--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material/react-text-field": "^0.15.0",
+    "moment": "^2.24.0",
+    "query-string": "^6.8.3",
     "react": "^16.10.2",
+    "react-document-title": "^2.0.3",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-styled-flexboxgrid": "^3.1.0",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
