--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material/react-text-field": "^0.15.0",
     "moment": "^2.24.0",
+    "numeral": "^2.0.6",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
     "react-document-title": "^2.0.3",
