--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.3.1",
     "@material/react-text-field": "^0.15.0",
     "antd": "^3.24.0",
     "babel-plugin-import": "^1.12.2",
