--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.3.1",
     "@material/react-text-field": "^0.15.0",
+    "@nivo/pie": "^0.59.1",
     "antd": "^3.24.0",
     "babel-plugin-import": "^1.12.2",
     "customize-cra": "^0.8.0",
