--- a/package.json
+++ b/package.json
@@ -7,12 +7,23 @@
     "@material/react-text-field": "^0.15.0",
     "@nivo/pie": "^0.59.1",
     "antd": "^3.24.0",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link": "^1.2.11",
+    "apollo-link-error": "^1.1.10",
+    "apollo-link-http": "^1.5.14",
+    "apollo-link-logger": "^1.2.3",
+    "apollo-link-retry": "^2.2.13",
+    "apollo-link-timeout": "^1.2.1",
     "babel-plugin-import": "^1.12.2",
     "customize-cra": "^0.8.0",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
     "moment": "^2.24.0",
     "numeral": "^2.0.6",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
+    "react-apollo": "^3.1.3",
     "react-app-rewired": "^2.1.3",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.10.2",
