--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "uid-safe": "^2.1.5"
   },
   "scripts": {
     "start": "react-app-rewired start",
