--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphql-tag": "^2.10.1",
     "moment": "^2.24.0",
     "numeral": "^2.0.6",
+    "papaparse": "^5.1.0",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
     "react-apollo": "^3.1.3",
