--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-link-logger": "^1.2.3",
     "apollo-link-retry": "^2.2.13",
     "apollo-link-timeout": "^1.2.1",
+    "aws-sdk": "^2.578.0",
     "babel-plugin-import": "^1.12.2",
     "customize-cra": "^0.8.0",
     "email-validator": "^2.0.4",
