--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apollo-link-timeout": "^1.2.1",
     "apollo-upload-client": "^11.0.0",
     "babel-plugin-import": "^1.12.2",
+    "chart.js": "^2.9.3",
     "customize-cra": "^0.8.0",
     "email-validator": "^2.0.4",
     "graphql": "^14.5.8",
@@ -28,6 +29,7 @@
     "react": "^16.10.2",
     "react-apollo": "^3.1.3",
     "react-app-rewired": "^2.1.3",
+    "react-chartjs-2": "^2.8.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
