--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "arrow",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "deploy": "git push heroku staging"
+  }
 }
