--- a/arrow-backend/package.json
+++ b/arrow-backend/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "mongoose": "^5.5.9",
+    "node-cron": "^2.0.3",
     "nodemailer": "^6.3.0"
   },
   "devDependencies": {
