--- a/arrow-backend/package.json
+++ b/arrow-backend/package.json
@@ -25,8 +25,7 @@
     "dotenv": "^8.0.0",
     "graphql": "^14.2.1",
     "graphql-toolkit": "^0.5.10",
-    "graphql-tools": "^4.0.5",
-    "lodash": "^4.17.11",
+    "lodash.merge": "^4.6.2",
     "moment": "^2.24.0",
     "mongoose": "^5.5.9",
     "node-cron": "^2.0.3",
